// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Charts/LineChart Humidity Once A Day 1`] = `
<div
  className="bg-white"
  style={
    Object {
      "height": 300,
      "width": 600,
    }
  }
>
  <div
    style={
      Object {
        "height": "inherit",
        "position": "relative",
        "width": "inherit",
      }
    }
  >
    <div>
      <svg
        className="overflow-visible"
        height={300}
        width={600}
      >
        <g
          className="visx-group visx-rows"
          transform="translate(64, 0)"
        >
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={220}
            y2={220}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={167.61904761904762}
            y2={167.61904761904762}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={115.23809523809524}
            y2={115.23809523809524}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={62.857142857142854}
            y2={62.857142857142854}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={10.476190476190489}
            y2={10.476190476190489}
          />
        </g>
        <g
          className="visx-group visx-axis visx-axis-bottom"
          transform="translate(64, 232)"
        >
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#CFD0DC"
              strokeLinecap="square"
              strokeWidth={1}
              x1={83.02583333333334}
              x2={83.02583333333334}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="middle"
                transform=""
                x={83.02583333333334}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={83.02583333333334}
                >
                  Apr 11
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#CFD0DC"
              strokeLinecap="square"
              strokeWidth={1}
              x1={183.82583333333335}
              x2={183.82583333333335}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="middle"
                transform=""
                x={183.82583333333335}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={183.82583333333335}
                >
                  Mon 12
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#CFD0DC"
              strokeLinecap="square"
              strokeWidth={1}
              x1={284.62583333333333}
              x2={284.62583333333333}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="middle"
                transform=""
                x={284.62583333333333}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={284.62583333333333}
                >
                  Tue 13
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#CFD0DC"
              strokeLinecap="square"
              strokeWidth={1}
              x1={385.42583333333334}
              x2={385.42583333333334}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="middle"
                transform=""
                x={385.42583333333334}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={385.42583333333334}
                >
                  Wed 14
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#CFD0DC"
              strokeLinecap="square"
              strokeWidth={1}
              x1={486.22583333333336}
              x2={486.22583333333336}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="middle"
                transform=""
                x={486.22583333333336}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={486.22583333333336}
                >
                  Thu 15
                </tspan>
              </text>
            </svg>
          </g>
          <svg
            fontSize={10}
            style={
              Object {
                "overflow": "visible",
              }
            }
            x={0}
            y={0}
          >
            <text
              className="visx-axis-label font-bold"
              fill="#8330FF"
              fontSize={10}
              textAnchor="middle"
              x={252}
              y={52}
            >
              <tspan
                dy="0em"
                x={252}
              >
                Messdatum
              </tspan>
            </text>
          </svg>
        </g>
        <g
          className="visx-group visx-axis visx-axis-left"
          transform="translate(64, 0)"
        >
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="end"
                transform=""
                x={-8}
                y={220}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  0
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="end"
                transform=""
                x={-8}
                y={167.61904761904762}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  20
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="end"
                transform=""
                x={-8}
                y={115.23809523809524}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  40
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="end"
                transform=""
                x={-8}
                y={62.857142857142854}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  60
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="end"
                transform=""
                x={-8}
                y={10.476190476190489}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  80
                </tspan>
              </text>
            </svg>
          </g>
          <svg
            fontSize={10}
            style={
              Object {
                "overflow": "visible",
              }
            }
            x={0}
            y={0}
          >
            <text
              className="visx-axis-label font-bold"
              fill="#8330FF"
              fontSize={10}
              textAnchor="middle"
              transform="rotate(-90)"
              x={-110}
              y={-32}
            >
              <tspan
                dy="0em"
                x={-110}
              >
                %
              </tspan>
            </text>
          </svg>
        </g>
        <g
          className="visx-group"
          transform="translate(64, 0)"
        >
          <path
            className="visx-linepath"
            d="M0,36.66666666666666L100.80000000000001,75.95238095238095L201.60000000000002,60.23809523809524L302.4,96.9047619047619L403.20000000000005,41.904761904761905L504,86.42857142857144"
            fill="transparent"
            shapeRendering="geometricPrecision"
            stroke="#8330FF"
            strokeLinecap="round"
            strokeOpacity={1}
            strokeWidth={2}
          />
        </g>
        <rect
          className="visx-bar"
          fill="transparent"
          height={220}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          rx={14}
          width={504}
          x={64}
          y={0}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Charts/LineChart Paxcounter Throughout Day 1`] = `
<div
  className="bg-white"
  style={
    Object {
      "height": 300,
      "width": 600,
    }
  }
>
  <div
    style={
      Object {
        "height": "inherit",
        "position": "relative",
        "width": "inherit",
      }
    }
  >
    <div>
      <svg
        className="overflow-visible"
        height={300}
        width={600}
      >
        <g
          className="visx-group visx-rows"
          transform="translate(64, 0)"
        >
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={220}
            y2={220}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={183.40652029274784}
            y2={183.40652029274784}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={146.81304058549568}
            y2={146.81304058549568}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={110.2195608782435}
            y2={110.2195608782435}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={73.62608117099134}
            y2={73.62608117099134}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={37.03260146373916}
            y2={37.03260146373916}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={0.4391217564870131}
            y2={0.4391217564870131}
          />
        </g>
        <g
          className="visx-group visx-axis visx-axis-bottom"
          transform="translate(64, 232)"
        >
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#CFD0DC"
              strokeLinecap="square"
              strokeWidth={1}
              x1={64.02348484848484}
              x2={64.02348484848484}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="middle"
                transform=""
                x={64.02348484848484}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={64.02348484848484}
                >
                  Apr 11
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#CFD0DC"
              strokeLinecap="square"
              strokeWidth={1}
              x1={155.65984848484848}
              x2={155.65984848484848}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="middle"
                transform=""
                x={155.65984848484848}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={155.65984848484848}
                >
                  Mon 12
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#CFD0DC"
              strokeLinecap="square"
              strokeWidth={1}
              x1={247.29621212121214}
              x2={247.29621212121214}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="middle"
                transform=""
                x={247.29621212121214}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={247.29621212121214}
                >
                  Tue 13
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#CFD0DC"
              strokeLinecap="square"
              strokeWidth={1}
              x1={338.9325757575757}
              x2={338.9325757575757}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="middle"
                transform=""
                x={338.9325757575757}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={338.9325757575757}
                >
                  Wed 14
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#CFD0DC"
              strokeLinecap="square"
              strokeWidth={1}
              x1={430.5689393939394}
              x2={430.5689393939394}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="middle"
                transform=""
                x={430.5689393939394}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={430.5689393939394}
                >
                  Thu 15
                </tspan>
              </text>
            </svg>
          </g>
          <svg
            fontSize={10}
            style={
              Object {
                "overflow": "visible",
              }
            }
            x={0}
            y={0}
          >
            <text
              className="visx-axis-label font-bold"
              fill="#8330FF"
              fontSize={10}
              textAnchor="middle"
              x={252}
              y={52}
            >
              <tspan
                dy="0em"
                x={252}
              >
                Messdatum
              </tspan>
            </text>
          </svg>
        </g>
        <g
          className="visx-group visx-axis visx-axis-left"
          transform="translate(64, 0)"
        >
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="end"
                transform=""
                x={-8}
                y={220}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  0
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="end"
                transform=""
                x={-8}
                y={183.40652029274784}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  200
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="end"
                transform=""
                x={-8}
                y={146.81304058549568}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  400
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="end"
                transform=""
                x={-8}
                y={110.2195608782435}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  600
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="end"
                transform=""
                x={-8}
                y={73.62608117099134}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  800
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="end"
                transform=""
                x={-8}
                y={37.03260146373916}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  1,000
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="end"
                transform=""
                x={-8}
                y={0.4391217564870131}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  1,200
                </tspan>
              </text>
            </svg>
          </g>
          <svg
            fontSize={10}
            style={
              Object {
                "overflow": "visible",
              }
            }
            x={0}
            y={0}
          >
            <text
              className="visx-axis-label font-bold"
              fill="#8330FF"
              fontSize={10}
              textAnchor="middle"
              transform="rotate(-90)"
              x={-110}
              y={-32}
            >
              <tspan
                dy="0em"
                x={-110}
              >
                Anzahl an Personen
              </tspan>
            </text>
          </svg>
        </g>
        <g
          className="visx-group"
          transform="translate(64, 0)"
        >
          <path
            className="visx-linepath"
            d="M0,211.0345974717232L95.45454545454545,185.4191616766467L190.9090909090909,75.45575515635394L313.09090909090907,201.70326014637394L408.5454545454545,36.666666666666636L504,164.0119760479042"
            fill="transparent"
            shapeRendering="geometricPrecision"
            stroke="#8330FF"
            strokeLinecap="round"
            strokeOpacity={1}
            strokeWidth={2}
          />
        </g>
        <rect
          className="visx-bar"
          fill="transparent"
          height={220}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          rx={14}
          width={504}
          x={64}
          y={0}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Charts/LineChart Temperature Throughout Day 1`] = `
<div
  className="bg-white"
  style={
    Object {
      "height": 300,
      "width": 600,
    }
  }
>
  <div
    style={
      Object {
        "height": "inherit",
        "position": "relative",
        "width": "inherit",
      }
    }
  >
    <div>
      <svg
        className="overflow-visible"
        height={300}
        width={600}
      >
        <g
          className="visx-group visx-rows"
          transform="translate(64, 0)"
        >
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={220}
            y2={220}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={179.43952802359883}
            y2={179.43952802359883}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={138.87905604719765}
            y2={138.87905604719765}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={98.31858407079646}
            y2={98.31858407079646}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={57.75811209439529}
            y2={57.75811209439529}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={17.197640117994112}
            y2={17.197640117994112}
          />
        </g>
        <g
          className="visx-group visx-axis visx-axis-bottom"
          transform="translate(64, 232)"
        >
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#CFD0DC"
              strokeLinecap="square"
              strokeWidth={1}
              x1={54.00242407918658}
              x2={54.00242407918658}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="middle"
                transform=""
                x={54.00242407918658}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={54.00242407918658}
                >
                  06 AM
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#CFD0DC"
              strokeLinecap="square"
              strokeWidth={1}
              x1={145.63261733216618}
              x2={145.63261733216618}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="middle"
                transform=""
                x={145.63261733216618}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={145.63261733216618}
                >
                  09 AM
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#CFD0DC"
              strokeLinecap="square"
              strokeWidth={1}
              x1={237.26281058514576}
              x2={237.26281058514576}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="middle"
                transform=""
                x={237.26281058514576}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={237.26281058514576}
                >
                  12 PM
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#CFD0DC"
              strokeLinecap="square"
              strokeWidth={1}
              x1={328.8930038381254}
              x2={328.8930038381254}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="middle"
                transform=""
                x={328.8930038381254}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={328.8930038381254}
                >
                  03 PM
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#CFD0DC"
              strokeLinecap="square"
              strokeWidth={1}
              x1={420.523197091105}
              x2={420.523197091105}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="middle"
                transform=""
                x={420.523197091105}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={420.523197091105}
                >
                  06 PM
                </tspan>
              </text>
            </svg>
          </g>
          <svg
            fontSize={10}
            style={
              Object {
                "overflow": "visible",
              }
            }
            x={0}
            y={0}
          >
            <text
              className="visx-axis-label font-bold"
              fill="#8330FF"
              fontSize={10}
              textAnchor="middle"
              x={252}
              y={52}
            >
              <tspan
                dy="0em"
                x={252}
              >
                Messdatum
              </tspan>
            </text>
          </svg>
        </g>
        <g
          className="visx-group visx-axis visx-axis-left"
          transform="translate(64, 0)"
        >
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="end"
                transform=""
                x={-8}
                y={220}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  0
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="end"
                transform=""
                x={-8}
                y={179.43952802359883}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  5
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="end"
                transform=""
                x={-8}
                y={138.87905604719765}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  10
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="end"
                transform=""
                x={-8}
                y={98.31858407079646}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  15
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="end"
                transform=""
                x={-8}
                y={57.75811209439529}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  20
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="end"
                transform=""
                x={-8}
                y={17.197640117994112}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  25
                </tspan>
              </text>
            </svg>
          </g>
          <svg
            fontSize={10}
            style={
              Object {
                "overflow": "visible",
              }
            }
            x={0}
            y={0}
          >
            <text
              className="visx-axis-label font-bold"
              fill="#8330FF"
              fontSize={10}
              textAnchor="middle"
              transform="rotate(-90)"
              x={-110}
              y={-32}
            >
              <tspan
                dy="0em"
                x={-110}
              >
                °C
              </tspan>
            </text>
          </svg>
        </g>
        <g
          className="visx-group"
          transform="translate(64, 0)"
        >
          <path
            className="visx-linepath"
            d="M0,107.24188790560471L136.9871389132045,54.513274336283196L278.8272843579557,69.1150442477876L394.6461517742913,50.45722713864308L504,36.66666666666666"
            fill="transparent"
            shapeRendering="geometricPrecision"
            stroke="#8330FF"
            strokeLinecap="round"
            strokeOpacity={1}
            strokeWidth={2}
          />
        </g>
        <rect
          className="visx-bar"
          fill="transparent"
          height={220}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          rx={14}
          width={504}
          x={64}
          y={0}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Charts/LineChart Values Without Supplied Unit 1`] = `
<div
  className="bg-white"
  style={
    Object {
      "height": 300,
      "width": 600,
    }
  }
>
  <div
    style={
      Object {
        "height": "inherit",
        "position": "relative",
        "width": "inherit",
      }
    }
  >
    <div>
      <svg
        className="overflow-visible"
        height={300}
        width={600}
      >
        <g
          className="visx-group visx-rows"
          transform="translate(64, 0)"
        >
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={220}
            y2={220}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={167.61904761904762}
            y2={167.61904761904762}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={115.23809523809524}
            y2={115.23809523809524}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={62.857142857142854}
            y2={62.857142857142854}
          />
          <line
            className="visx-line"
            fill="transparent"
            shapeRendering="crispEdges"
            stroke="#eaf0f6"
            strokeWidth={1}
            x1={0}
            x2={504}
            y1={10.476190476190489}
            y2={10.476190476190489}
          />
        </g>
        <g
          className="visx-group visx-axis visx-axis-bottom"
          transform="translate(64, 232)"
        >
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#CFD0DC"
              strokeLinecap="square"
              strokeWidth={1}
              x1={83.02583333333334}
              x2={83.02583333333334}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="middle"
                transform=""
                x={83.02583333333334}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={83.02583333333334}
                >
                  Apr 11
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#CFD0DC"
              strokeLinecap="square"
              strokeWidth={1}
              x1={183.82583333333335}
              x2={183.82583333333335}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="middle"
                transform=""
                x={183.82583333333335}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={183.82583333333335}
                >
                  Mon 12
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#CFD0DC"
              strokeLinecap="square"
              strokeWidth={1}
              x1={284.62583333333333}
              x2={284.62583333333333}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="middle"
                transform=""
                x={284.62583333333333}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={284.62583333333333}
                >
                  Tue 13
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#CFD0DC"
              strokeLinecap="square"
              strokeWidth={1}
              x1={385.42583333333334}
              x2={385.42583333333334}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="middle"
                transform=""
                x={385.42583333333334}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={385.42583333333334}
                >
                  Wed 14
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0 16)"
          >
            <line
              className="visx-line"
              fill="transparent"
              shapeRendering="crispEdges"
              stroke="#CFD0DC"
              strokeLinecap="square"
              strokeWidth={1}
              x1={486.22583333333336}
              x2={486.22583333333336}
              y1={0}
              y2={8}
            />
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="middle"
                transform=""
                x={486.22583333333336}
                y={18}
              >
                <tspan
                  dy="0em"
                  x={486.22583333333336}
                >
                  Thu 15
                </tspan>
              </text>
            </svg>
          </g>
          
        </g>
        <g
          className="visx-group visx-axis visx-axis-left"
          transform="translate(64, 0)"
        >
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="end"
                transform=""
                x={-8}
                y={220}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  0
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="end"
                transform=""
                x={-8}
                y={167.61904761904762}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  20
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="end"
                transform=""
                x={-8}
                y={115.23809523809524}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  40
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="end"
                transform=""
                x={-8}
                y={62.857142857142854}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  60
                </tspan>
              </text>
            </svg>
          </g>
          <g
            className="visx-group visx-axis-tick"
            transform="translate(0, 0)"
          >
            <svg
              fontSize={9}
              style={
                Object {
                  "overflow": "visible",
                }
              }
              x={0}
              y={0}
            >
              <text
                fill="#787696"
                fontSize={9}
                textAnchor="end"
                transform=""
                x={-8}
                y={10.476190476190489}
              >
                <tspan
                  dy="0em"
                  x={-8}
                >
                  80
                </tspan>
              </text>
            </svg>
          </g>
          
        </g>
        <g
          className="visx-group"
          transform="translate(64, 0)"
        >
          <path
            className="visx-linepath"
            d="M0,36.66666666666666L100.80000000000001,75.95238095238095L201.60000000000002,60.23809523809524L302.4,96.9047619047619L403.20000000000005,41.904761904761905L504,86.42857142857144"
            fill="transparent"
            shapeRendering="geometricPrecision"
            stroke="#8330FF"
            strokeLinecap="round"
            strokeOpacity={1}
            strokeWidth={2}
          />
        </g>
        <rect
          className="visx-bar"
          fill="transparent"
          height={220}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          rx={14}
          width={504}
          x={64}
          y={0}
        />
      </svg>
    </div>
  </div>
</div>
`;
